--- a/HTML练习/html网页02商城.html
+++ b/HTML练习/html网页02商城.html
@@ -1,13 +1,89 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>我是一级标题</h3>
-    <h3>我是三级标题</h3>
-    <a href="https://taobao.com">我是超链接</a>
-</body>
+<!DOCTYPE HTML>
+<html lang = "en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="html网页02新拟态.css">
+        <title>The Sims page</title>
+        
+    </head>
+
+    <body>
+
+        <!-- 整个的大盒子 -->
+        <div class="container">
+            <!-- 每个图标的小盒子 -->
+            <div class="box">
+                <!-- 放图片的小盒子 -->
+                <div class="img">
+                       <!-- 图标-->
+                       <img src="images/扫码.png" alt="0^0">
+                </div>
+                <!-- 图标名字 -->
+                <p>第一个</p>
+
+            </div>
+
+            <!-- 每个图标的小盒子 -->
+            <div class="box">
+                <!-- 放图片的小盒子 -->
+                <div class="img">
+                       <!-- 图标-->
+                       <img src="images/电话.png" alt="0^0">
+                </div>
+                <!-- 图标名字 -->
+                <p>第二个</p>
+
+            </div>
+
+            <!-- 每个图标的小盒子 -->
+            <div class="box">
+                <!-- 放图片的小盒子 -->
+                <div class="img">
+                       <!-- 图标-->
+                       <img src="images/皇冠.png" alt="0^0">
+                </div>
+                <!-- 图标名字 -->
+                <p>第三个</p>
+
+            </div>
+
+            <!-- 每个图标的小盒子 -->
+            <div class="box">
+                <!-- 放图片的小盒子 -->
+                <div class="img">
+                       <!-- 图标-->
+                       <img src="images/设置_填充.png" alt="0^0">
+                </div>
+                <!-- 图标名字 -->
+                <p>第四个</p>
+
+            </div>
+
+            <!-- 每个图标的小盒子 -->
+            <div class="box">
+                <!-- 放图片的小盒子 -->
+                <div class="img">
+                       <!-- 图标-->
+                       <img src="images/加星收藏_填充.png" alt="0^0">
+                </div>
+                <!-- 图标名字 -->
+                <p>第五个</p>
+
+            </div>
+
+            <!-- 每个图标的小盒子 -->
+            <div class="box">
+                <!-- 放图片的小盒子 -->
+                <div class="img">
+                       <!-- 图标-->
+                       <img src="images/喜爱.png" alt="0^0">
+                </div>
+                <!-- 图标名字 -->
+                <p>第六个</p>
+
+            </div>
+        </div>
+ 
+    </body>
 </html>
